# iTRLib

./: .gitignore  .gitignore~  CMakeLists.txt  README.md  iTRLib.workspace  itr.workspace  itr.workspace.layout  my.md  resources.md
ASICameraDemo/: ASICameraDemo.cbp  ASICameraDemo.layout  main.cpp
ColorTrackDemo/: 1.txt  1.txt~  2.txt  2.txt~  ColorTrackDemo.cbp  TestFuncs.cpp  TestFuncs.h  Udp.h  main.cpp
OpenSURFLib/: OpenSURFLib.cbp
OpenSURFTest/: OpenSURFTest.cbp
TEST4V4L/: TEST4V4L.cbp  main.cpp
doc/: EclipseStyle.xml  cbconfig.md  codetemplates.xml  developplan.md  dict.txt  eclipseconfig.md  eclipsething.md  github  github.md  logonodroid.md  resources.md  v4l2.md  work.xmind  注释格式
guanqp/: codeblocks.sh
itralgorithm/: .cproject  .gitignore  .project  CMakeLists.txt  itralgorithm.cbp  itralgorithm.h
itralgorithm/classifier/: CMakeLists.txt  classifier.h  domain.cpp  domain.h  fern.cpp  fern.h  gaussiannaivebayes.cpp  guassiannaivebayes.h  naivebayes.cpp  naivebayes.h  nearestneighbor.cpp  nearestneighbor.h  trainingdata.cpp  trainingdata.h
itralgorithm/filter/: CMakeLists.txt  filter.h  kalmanfilter.cpp  kalmanfilter.h  particlefilter.cpp  particlefilter.h  ransac.cpp  ransac.h
itralgorithm_test/: .cproject  .gitignore  .project  bayestest.cpp  bayestest.h  data  itralgorithm_test.cbp  kftest.cpp  kftest.h  main.cpp  naivebayestest.cpp  naivebayestest.h  pftest.cpp  pftest.h  plotCurve.m  ransactest.cpp  ransactest.h
itraltorithm/: .project
itrbase/: .cproject  .gitignore  .project  CMakeLists.txt  itrbase.cbp  itrbase.h
itrbase/container/: CMakeLists.txt  bytestream.cpp  bytestream.h  container.h  cyclequeue.cpp  cyclequeue.h
itrbase/encode/: CMakeLists.txt  crc.cpp  crc.h
itrbase/math/: CMakeLists.txt  Point2D.h  calculate.cc  calculate.h  gaussiangenerate.cc  gaussiangenerate.h  geometry.cc  geometry.h  helpdebug.cpp  helpdebug.h  math.cc  math.h  matrix.cc  matrix.h  numerical.cc  numerical.h  statistics.cc  statistics.h  transform2d.cc  transform2d.h  vector.cc  vector.h
itrbase/platform/: CMakeLists.txt  assistmacro.h  bitoperator.cpp  bitoperator.h  debugsupport.h  log.cpp  log.h  memoryoperation.cc  memoryoperation.h  platform.h  timeclock.cpp  timeclock.h  typedef.h
itrbase/protocol/: CMakeLists.txt  combopPackage.cpp  combopackage.h  comboprotocol.cpp  comboprotocol.h  istandardexchangeprocessor.h  protocol.h  standardexchangepackage.cpp  standardexchangepackage.h  standardexchangepackageserial.cpp  standardexchangepackageserial.h  standardexchangeprotocolserial.cpp  standardexchangeprotocolserial.h  standserialprotocol.cpp  standserialprotocol.h
itrbase_test/: .cproject  .gitignore  .project  CMakeLists.txt  calculatetest.cc  calculatetest.h  containertest.cc  containertest.h  fopen_p.raw  gmon.out  helpertest.cc  helpertest.h  itrbase_test  itrbase_test.cbp  main.cc  math_test.cc  math_test.h  mathtest.cc  mathtest.h  platform_test.cc  platform_test.h  ssptest.cpp  ssptest.h
itrbase_test/Debug/: itrbase_test  main.d  makefile  subdir.mk
itrdevice/: CMakeLists.txt  itrdevice.cbp  itrdevice.h  itrdevice.h~  v4ltest.cpp
itrdevice/Ijoystick/: Ijoystick.h
itrdevice/camera/: CMakeLists.txt  IimageAquaire.cpp  Iimageaquaire.h  StdImageAquaire.cpp  asicamera.cpp  asicamera.h  asicameraapi.h  camera.h  icamera.cpp  icamera.h  iimageaquaire.cpp  imageaquaire.h  stdimageaquaire.cpp  stdimageaquaire.h  v4linux.cpp  v4linux.h
itrdevice/joystick/: CMakeLists.txt  Ijoystick.cpp  Ijoystick.h  joystick.h  stdjoystick.cpp  stdjoystick.h
itrdevice/other/: laserurg.cpp  laserurg.h
itrdevice_test/: V4Ltest.cpp  V4Ltest.h  asicameratest.cpp  asicameratest.h  itrdevice_test.cbp  joystickprocesstest.cpp  joystickprocesstest.h  joysticktest.cpp  joysticktest.h  main.cpp  stdcameratest.cpp  stdcameratest.h  v4ltestbygqp.cpp  v4ltestbygqp.h
itrneon/: CMakeLists.txt  itrneon.cbp  itrneon.h
itrneon/math/: CMakeLists.txt  calculateneon.cpp  calculateneon.h  math.cpp  math.h
itrneon_test/: itrneon_test.cbp  main.cpp
itrsystem/: CMakeLists.txt  asyncbuffer.h  itrsystem.cbp  itrsystem.h  itrthread.h  serialport.cpp  serialport.h  udp.h
itrsystem_test/: itrsystem_test.cbp  main.cpp
itrvision/: .cproject  .gitignore  .project  CMakeLists.txt  block.cpp  block.h  itrvision.cbp  itrvision.h  test.cc
itrvision/Debug/: makefile  sources.mk
itrvision/Debug/image/: iformat.d  image.d  subdir.mk
itrvision/camera/: CMakeLists.txt  camera.h  cameraextercalc.cpp  cameraextercalc.h  cameraintercalc.cpp  cameraintercalc.h  camerastereocalc.cpp  camerastereocalc.h
itrvision/color/: color.h  colorargb.h  colorgray.h
itrvision/feature/: CMakeLists.txt  FeatureMatch.cpp  FeatureMatch.h  block.cpp  block.h  commfeaturepoint.cpp  commfeaturepoint.h  feature.h  featurepoint.h  ipointImg.h  lktracker.cc  lktracker.h  meanshift.cpp  meanshift.h  pyramid.cpp  pyramid.h  selectfeature.cpp  selectfeature.h  selectkltfeature.cpp  selectkltfeature.h  selectseature.h  surf.cpp  surf.h  tracker.cc  tracker.h  vectorfeaturepoint.cpp  vectorfeaturepoint.h
itrvision/format/: FormatPGM.cpp  FormatPGM.h  FormatPPM.cpp  FormatPPM.h  format.h  formatpgm.cpp  formatpgm.h  formatppm.cpp  formatppm.h  iformat.h
itrvision/helper/: CMakeLists.txt  ImageAquaire.h  convertformat.cpp  convertformat.h  formatconverter.h  gaussiangenerate.cc  gaussiangenerate.h  genrect.cpp  genrect.h  helper.h  iopnm.cpp  iopnm.h
itrvision/image/: iformat.cc  iformat.h  image.cc  image.h
itrvision/operation/: CMakeLists.txt  draw.cpp  draw.h  operation.h  pick.cpp  pick.h  rotate.cc  rotate.h  scale.cpp  scale.h
itrvision/process/: CMakeLists.txt  binarization.cc  binarization.h  boxhessian.cpp  boxhessian.h  colorconvert.cpp  colorconvert.h  connectedanalysis.cpp  connectedanalysis.h  convolutefast.cc  convolutefast.h  convolutesquare.cc  convolutesquare.h  fasthessian.cpp  fasthessian.h  gradient.cpp  gradient.h  histogram.cpp  histogram.h  integralimg.cpp  integralimg.h  process.h  responselayer.h
ix264/: CMakeLists.txt  ix264.cbp  ix264.cpp  ix264.h
ix264_test/: main.cpp  (+3 more)
(+112 files in other folders)
