project(itrlib)
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

add_subdirectory(3rdparty/alglib)
add_subdirectory(itrbase)
add_subdirectory(itrbase_test)
add_subdirectory(itralgorithm)
add_subdirectory(itrvision)
add_subdirectory(itrdevice)
#add_subdirectory(itrneon)
add_subdirectory(itrsystem)
add_subdirectory(ix264)